exports[`mcfunction argument parser > brigadier:long > Parse '-123' 1`] = `
{
  "node": {
    "type": "long",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": -123
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > brigadier:long > Parse '0' 1`] = `
{
  "node": {
    "type": "long",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > brigadier:long > Parse '123' 1`] = `
{
  "node": {
    "type": "long",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 123
  },
  "errors": []
}
`;
